fix cropping

--- a/app/assets/stylesheets/app/groups.sass
+++ b/app/assets/stylesheets/app/groups.sass
@@ -216,7 +216,6 @@ input.input100
     color: white
 
 .submit-btn
-  width: 20%
   display: inline-block
   position: relative
 
@@ -285,6 +284,14 @@ input.input100
   padding-top: 45px
 
 .croping-avatar
+  .preview
+    display: flex
+    justify-content: space-between
+
+  .form
+    margin-right: 20%
+    padding-top: 120px
+
   .submit-placeholder
     text-align: center
 
